--- a/webrevs/7195779/src/share/classes/sun/rmi/rmic/iiop/StubGenerator.java.udiff.html
+++ b/webrevs/7195779/src/share/classes/sun/rmi/rmic/iiop/StubGenerator.java.udiff.html
@@ -106,28 +106,14 @@ span.new {
          writeIds( p, theType, true ) ;
  
 </pre><hr /><pre>
-<span class="newmarker">@@ -1677,10 +1677,11 @@</span>
-         // Register all the argument names used, plus our
-         // data member names...
- 
-         addNamesInUse(remoteMethods);
-         addNameInUse("target");
-<span class="new">+        addNameInUse("sTarget");</span>
-         addNameInUse("_type_ids");
- 
-         // Write the _invoke method...
-         p.pln();
- 
-</pre><hr /><pre>
-<span class="newmarker">@@ -1693,10 +1694,15 @@</span>
+<span class="newmarker">@@ -1693,10 +1693,14 @@</span>
          p.plnI("public OutputStream  _invoke(String "+method+", InputStream "+_in+", " +
                 "ResponseHandler "+reply+") throws SystemException {");
  
          if (remoteMethods.length &gt; 0) {
              p.plnI("try {");
-<span class="new">+            p.pln(getName(theType) + " sTarget;");</span>
-<span class="new">+            p.pln("sTarget = target;");</span>
-<span class="new">+            p.plnI("if (sTarget == null) {");</span>
+<span class="new">+            p.pln(getName(theType) + " target = this.target;");</span>
+<span class="new">+            p.plnI("if (target == null) {");</span>
 <span class="new">+            p.pln("throw new java.io.IOException();");</span>
 <span class="new">+            p.pOln("}");</span>
              p.plnI(idExtInputStream + " "+in+" = ");
@@ -135,35 +121,5 @@ span.new {
              p.pO();
  
              // See if we should use a hash table style
-</pre><hr /><pre>
-<span class="newmarker">@@ -1819,12 +1825,14 @@</span>
-             p.pOln("}");
-         } else {
-             p.plnI("public void deactivate() {");
-             p.pln("_orb().disconnect(this);");
-             p.pln("_set_delegate(null);");
-<span class="new">+            p.plnI("synchronized(this) {");</span>
-             p.pln("target = null;");
-             p.pOln("}");
-<span class="new">+            p.pOln("}");</span>
-         }
-     }
- 
-     public void write_tie_orb_method(IndentingWriter p)
-         throws IOException
-</pre><hr /><pre>
-<span class="newmarker">@@ -2147,11 +2155,11 @@</span>
-             } else {
-                 p.p(getName(returnType)+" result = ");
-             }
-         }
- 
-<span class="removed">-        p.p("target."+methodName+"(");</span>
-<span class="new">+        p.p("sTarget."+methodName+"(");</span>
-         for(int i = 0; i &lt; paramNames.length; i++) {
-             if (i &gt; 0)
-                 p.p(", ");
-             p.p(paramNames[i]);
-         }
 </pre></body></html>
 
