--- a/webrevs/JDK-6783290/index.html
+++ b/webrevs/JDK-6783290/index.html
@@ -84,12 +84,13 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <div class="summary">
 <h2>Code Review for jdk</h2>
 <table>
-<tr><th>Prepared by:</th><td>Jaroslav Bachorik <jaroslav.bachorik@oracle.com> on Wed Oct 10 10:19:38 CEST 2012</td></tr>
+<tr><th>Prepared by:</th><td>Jaroslav Bachorik <jaroslav.bachorik@oracle.com> on Wed Oct 10 20:43:07 CEST 2012</td></tr>
 <tr><th>Workspace:</th><td>/opt/src/jdks/openjdk8-tl/jdk</td></tr>
+<tr><th>Compare against:</th><td>
+http://hg.openjdk.java.net/jdk8/tl/jdk
 </td></tr>
-<tr><th>Compare against version:</th><td>-2</td></tr>
 <tr><th>Summary of changes:</th><td>
-78 lines changed: 14 ins; 37 del; 27 mod; 1035 unchg</td></tr>
+95 lines changed: 83 ins; 4 del; 8 mod; 985 unchg</td></tr>
 <tr><th>Patch of changes:</th><td>
 <a href="jdk.patch">jdk.patch</a></td></tr>
 <tr><th>Legend:</th><td>
@@ -107,8 +108,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <a href="raw_files/new/src/share/classes/javax/management/MBeanFeatureInfo.java">Raw</a>
 </code>
 <b>src/share/classes/javax/management/MBeanFeatureInfo.java</b> 
-</p><blockquote><pre>rev 5921 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6783290">6783290</a></pre>
-<!-- Add comments to explain changes in src/share/classes/javax/management/MBeanFeatureInfo.java here -->
+</p><blockquote><!-- Add comments to explain changes in src/share/classes/javax/management/MBeanFeatureInfo.java here -->
 <span class="lineschanged">6 lines changed: 0 ins; 2 del; 4 mod; 260 unchg</span>
 </blockquote>
 <p><code>
@@ -122,24 +122,20 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <a href="raw_files/new/src/share/classes/javax/management/MBeanInfo.java">Raw</a>
 </code>
 <b>src/share/classes/javax/management/MBeanInfo.java</b> 
-</p><blockquote><pre>rev 5921 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6783290">6783290</a></pre>
-<!-- Add comments to explain changes in src/share/classes/javax/management/MBeanInfo.java here -->
+</p><blockquote><!-- Add comments to explain changes in src/share/classes/javax/management/MBeanInfo.java here -->
 <span class="lineschanged">6 lines changed: 0 ins; 2 del; 4 mod; 725 unchg</span>
 </blockquote>
 <p><code>
-<a href="test/javax/management/MBeanInfo/SerializationTest1.java.cdiff.html">Cdiffs</a>
-<a href="test/javax/management/MBeanInfo/SerializationTest1.java.udiff.html">Udiffs</a>
-<a href="test/javax/management/MBeanInfo/SerializationTest1.java.sdiff.html">Sdiffs</a>
-<a href="test/javax/management/MBeanInfo/SerializationTest1.java.frames.html">Frames</a>
-<a href="test/javax/management/MBeanInfo/SerializationTest1.java-.html">Old</a>
+ ------ ------ ------
+ ------
+ ---
 <a href="test/javax/management/MBeanInfo/SerializationTest1.java.html">New</a>
 <a href="test/javax/management/MBeanInfo/SerializationTest1.java.patch">Patch</a>
 <a href="raw_files/new/test/javax/management/MBeanInfo/SerializationTest1.java">Raw</a>
 </code>
-<b>test/javax/management/MBeanInfo/SerializationTest1.java</b>  <i>(was test/javax/management/MBeanInfo/SerializationTest.java)</i>
-</p><blockquote><pre>rev 5921 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6783290">6783290</a></pre>
-<!-- Add comments to explain changes in test/javax/management/MBeanInfo/SerializationTest1.java here -->
-<span class="lineschanged">66 lines changed: 14 ins; 33 del; 19 mod; 50 unchg</span>
+<font color=green><b>test/javax/management/MBeanInfo/SerializationTest1.java</b></font>
+</p><blockquote><!-- Add comments to explain changes in test/javax/management/MBeanInfo/SerializationTest1.java here -->
+<span class="lineschanged">83 lines changed: 83 ins; 0 del; 0 mod; 0 unchg</span>
 </blockquote>
 
 
