--- a/webrevs/JDK-6783290/src/share/classes/javax/management/MBeanFeatureInfo.java.sdiff.html
+++ b/webrevs/JDK-6783290/src/share/classes/javax/management/MBeanFeatureInfo.java.sdiff.html
@@ -80,7 +80,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 </head><body id="SUNWwebrev">
 <h2>src/share/classes/javax/management/MBeanFeatureInfo.java</h2>
 <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev 5921 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6783290">6783290</a></pre>
+<pre></pre>
 
 <table><tr valign="top">
 <td><pre>
