--- a/webrevs/JDK-6783290/src/share/classes/javax/management/MBeanInfo.java.rhs.html
+++ b/webrevs/JDK-6783290/src/share/classes/javax/management/MBeanInfo.java.rhs.html
@@ -80,7 +80,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
     </head>
     <body id="SUNWwebrev" onkeypress="keypress(event);">
     <a name="0"></a>
-    <pre>rev 5921 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6783290">6783290</a></pre><hr></hr>
+    <pre></pre><hr></hr>
 <pre>
    1 /*
    2  * Copyright (c) 1999, 2008, Oracle and/or its affiliates. All rights reserved.
