--- a/webrevs/JDK-6783290/src/share/classes/javax/management/MBeanInfo.java.udiff.html
+++ b/webrevs/JDK-6783290/src/share/classes/javax/management/MBeanInfo.java.udiff.html
@@ -89,7 +89,7 @@ span.new {
 <body id="SUNWwebrev">
 <h2>src/share/classes/javax/management/MBeanInfo.java</h2>
         <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev 5921 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6783290">6783290</a></pre>
+<pre></pre>
         <pre>
 </pre><hr /><pre>
 <span class="newmarker">@@ -702,16 +702,14 @@</span>
