--- a/webrevs/JDK-6809322/index.html
+++ b/webrevs/JDK-6809322/index.html
@@ -84,12 +84,13 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <div class="summary">
 <h2>Code Review for jdk</h2>
 <table>
-<tr><th>Prepared by:</th><td>Jaroslav Bachorik <jaroslav.bachorik@oracle.com> on Wed Oct 10 16:06:17 CEST 2012</td></tr>
+<tr><th>Prepared by:</th><td>Jaroslav Bachorik <jaroslav.bachorik@oracle.com> on Wed Oct 10 20:48:14 CEST 2012</td></tr>
 <tr><th>Workspace:</th><td>/opt/src/jdks/openjdk8-tl/jdk</td></tr>
+<tr><th>Compare against:</th><td>
+http://hg.openjdk.java.net/jdk8/tl/jdk
 </td></tr>
-<tr><th>Compare against version:</th><td>-2</td></tr>
 <tr><th>Summary of changes:</th><td>
-102 lines changed: 48 ins; 18 del; 36 mod; 1336 unchg</td></tr>
+140 lines changed: 131 ins; 3 del; 6 mod; 1283 unchg</td></tr>
 <tr><th>Patch of changes:</th><td>
 <a href="jdk.patch">jdk.patch</a></td></tr>
 <tr><th>Legend:</th><td>
@@ -107,24 +108,20 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <a href="raw_files/new/src/share/classes/javax/management/timer/Timer.java">Raw</a>
 </code>
 <b>src/share/classes/javax/management/timer/Timer.java</b> 
-</p><blockquote><pre>rev 5922 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6809322">6809322</a></pre>
-<!-- Add comments to explain changes in src/share/classes/javax/management/timer/Timer.java here -->
+</p><blockquote><!-- Add comments to explain changes in src/share/classes/javax/management/timer/Timer.java here -->
 <span class="lineschanged">10 lines changed: 1 ins; 3 del; 6 mod; 1283 unchg</span>
 </blockquote>
 <p><code>
-<a href="test/javax/management/timer/MissingNotificationTest.java.cdiff.html">Cdiffs</a>
-<a href="test/javax/management/timer/MissingNotificationTest.java.udiff.html">Udiffs</a>
-<a href="test/javax/management/timer/MissingNotificationTest.java.sdiff.html">Sdiffs</a>
-<a href="test/javax/management/timer/MissingNotificationTest.java.frames.html">Frames</a>
-<a href="test/javax/management/timer/MissingNotificationTest.java-.html">Old</a>
+ ------ ------ ------
+ ------
+ ---
 <a href="test/javax/management/timer/MissingNotificationTest.java.html">New</a>
 <a href="test/javax/management/timer/MissingNotificationTest.java.patch">Patch</a>
 <a href="raw_files/new/test/javax/management/timer/MissingNotificationTest.java">Raw</a>
 </code>
-<b>test/javax/management/timer/MissingNotificationTest.java</b>  <i>(was test/javax/management/timer/StartTest.java)</i>
-</p><blockquote><pre>rev 5922 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6809322">6809322</a></pre>
-<!-- Add comments to explain changes in test/javax/management/timer/MissingNotificationTest.java here -->
-<span class="lineschanged">92 lines changed: 47 ins; 15 del; 30 mod; 53 unchg</span>
+<font color=green><b>test/javax/management/timer/MissingNotificationTest.java</b></font>
+</p><blockquote><!-- Add comments to explain changes in test/javax/management/timer/MissingNotificationTest.java here -->
+<span class="lineschanged">130 lines changed: 130 ins; 0 del; 0 mod; 0 unchg</span>
 </blockquote>
 
 
