--- a/webrevs/JDK-6809322/src/share/classes/javax/management/timer/Timer.java.udiff.html
+++ b/webrevs/JDK-6809322/src/share/classes/javax/management/timer/Timer.java.udiff.html
@@ -89,7 +89,7 @@ span.new {
 <body id="SUNWwebrev">
 <h2>src/share/classes/javax/management/timer/Timer.java</h2>
         <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev 5922 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6809322">6809322</a></pre>
+<pre></pre>
         <pre>
 </pre><hr /><pre>
 <span class="newmarker">@@ -26,16 +26,15 @@</span>
