--- a/webrevs/JDK-6809322/src/share/classes/javax/management/timer/Timer.java.cdiff.html
+++ b/webrevs/JDK-6809322/src/share/classes/javax/management/timer/Timer.java.cdiff.html
@@ -81,7 +81,7 @@ hr { border: none 0; border-top: 1px solid #aaa; height: 1px; }
 <body id="SUNWwebrev">
 <h2>src/share/classes/javax/management/timer/Timer.java</h2>
         <a class="print" href="javascript:print()">Print this page</a>
-<pre>rev 5922 : [mq]: JDK-<a href="http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6809322">6809322</a></pre>
+<pre></pre>
         <pre>
 <hr /><span class="oldmarker">*** 26,41 ****</span>
   package javax.management.timer;
